client-service.yml
apiVersion: v1
kind: Service
metadata:
    name: client-server
spec:
    type : NodePort
    selector:
        component:web
    ports: 
        -port:3050
        targetPort:3000
                
    selector:
        component : web
