server-service.yml
apiVersion: v1
kind: Service
metadata:
    name: server-service
spec:
    type : NodePort
    selector:
        component:web
    ports: 
        -port:5050
        targetPort:5000
        nodePort:5080
