worker-service.yml
apiVersion: v1
kind: Service
metadata:
    name: worker-service
spec:
    type : NodePort
    selector:
        component:web
    ports: 
        -port:9050
        targetPort:9000
        nodePort: 9080
