ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewwrite-target: /
spec:
    rules:
        -http:
            paths:
                -path:/
                 backend: 
                    serviceName:client-server
                    servicePort: 3000
